--- a/table.html
+++ b/table.html
@@ -96,7 +96,7 @@
             <td bgcolor="gray">22</td>
         </tr>
     </table>
-    <a href="second.html">Go back</a>
+    <a href="assesment2.html">Go back</a>
 
     
 </body></div>
