--- a/css1.html
+++ b/css1.html
@@ -10,6 +10,7 @@
         h3{ color: red;}
         ul{ letter-spacing: 5px;}
         p{color: brown;}
+        ol{color:brown;
     </style>
 </head>
 <body>
