--- a/index.html
+++ b/index.html
@@ -1,13 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <video src="./2672124181.mp4" controls autoplay loop width="500"></video> <br>
-    <a href="./assesment3.html"> GO BACK</a>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="bg">
+      <div class="levelPlus2"></div>
+      <div class="levelPlus1"></div>
+      <div class="top">
+        <div class="left"></div>
+        <div class="right">
+          <div class="time-container">
+            <div class="time-text">TIME</div>
+            <div class="time">
+              <div class="time-box time-box1">
+                <div class="num-hour"></div>
+                <div class="hour">hours</div>
+                <div class="col1">:</div>
+              </div>
+
+              <div class="time-box time-box2">
+                <div class="num-min"></div>
+                <div class="min">mins</div>
+                <div class="col2">:</div>
+              </div>
+
+              <div class="time-box time-box3">
+                <div class="num-sec"></div>
+                <div class="sec">secs</div>
+              </div>
+              <div class="time-box time-box4"><p class="am">AM</p></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="timer">
+          <div class="wake-img"></div>
+          <label for="wake" class="wake-text">Set wake up time</label>
+          <select name="wake" id="wake" class="wake-drop">
+            <option selected value="null">Default</option>
+            <option value="0">12 AM - 1 AM</option>
+            <option value="1">1 AM - 2 AM</option>
+            <option value="2">2 AM - 3 AM</option>
+            <option value="3">3 AM - 4 AM</option>
+            <option value="4">4 AM - 5 AM</option>
+            <option value="5">5 AM - 6 AM</option>
+            <option value="6">6 AM - 7 AM</option>
+            <option value="7">7 AM - 8 AM</option>
+            <option value="8">8 AM - 9 AM</option>
+            <option value="9">9 AM - 10 AM</option>
+            <option value="10">10 AM - 11 AM</option>
+            <option value="11">11 AM - 12 PM</option>
+            <option value="12">12 PM - 1 PM</option>
+            <option value="13">1 PM - 2 PM</option>
+            <option value="14">2 PM - 3 PM</option>
+            <option value="15">3 PM - 4 PM</option>
+            <option value="16">4 PM - 5 PM</option>
+            <option value="17">5 PM - 6 PM</option>
+            <option value="18">6 PM - 7 PM</option>
+            <option value="19">7 PM - 8 PM</option>
+            <option value="20">8 PM - 9 PM</option>
+            <option value="21">9 PM - 10 PM</option>
+            <option value="22">10 PM - 11 PM</option>
+            <option value="23">11 PM - 12 AM</option>
+          </select>
+          <div class="ver-line1"></div>
+          <div class="lunch-img"></div>
+          <label for="wake" class="lunch-text">Set lunch time</label>
+          <select name="lunch" id="lunch" class="lunch-drop">
+            <option selected value="null">Default</option>
+            <option value="0">12 AM - 1 AM</option>
+            <option value="1">1 AM - 2 AM</option>
+            <option value="2">2 AM - 3 AM</option>
+            <option value="3">3 AM - 4 AM</option>
+            <option value="4">4 AM - 5 AM</option>
+            <option value="5">5 AM - 6 AM</option>
+            <option value="6">6 AM - 7 AM</option>
+            <option value="7">7 AM - 8 AM</option>
+            <option value="8">8 AM - 9 AM</option>
+            <option value="9">9 AM - 10 AM</option>
+            <option value="10">10 AM - 11 AM</option>
+            <option value="11">11 AM - 12 PM</option>
+            <option value="12">12 PM - 1 PM</option>
+            <option value="13">1 PM - 2 PM</option>
+            <option value="14">2 PM - 3 PM</option>
+            <option value="15">3 PM - 4 PM</option>
+            <option value="16">4 PM - 5 PM</option>
+            <option value="17">5 PM - 6 PM</option>
+            <option value="18">6 PM - 7 PM</option>
+            <option value="19">7 PM - 8 PM</option>
+            <option value="20">8 PM - 9 PM</option>
+            <option value="21">9 PM - 10 PM</option>
+            <option value="22">10 PM - 11 PM</option>
+            <option value="23">11 PM - 12 AM</option>
+          </select>
+          <div class="ver-line2"></div>
+          <div class="nap-img"></div>
+          <label for="nap" class="nap-text">Set nap time</label>
+          <select name="nap" id="nap" class="nap-drop">
+            <option selected value="null">Default</option>
+            <option value="0">12 AM - 1 AM</option>
+            <option value="1">1 AM - 2 AM</option>
+            <option value="2">2 AM - 3 AM</option>
+            <option value="3">3 AM - 4 AM</option>
+            <option value="4">4 AM - 5 AM</option>
+            <option value="5">5 AM - 6 AM</option>
+            <option value="6">6 AM - 7 AM</option>
+            <option value="7">7 AM - 8 AM</option>
+            <option value="8">8 AM - 9 AM</option>
+            <option value="9">9 AM - 10 AM</option>
+            <option value="10">10 AM - 11 AM</option>
+            <option value="11">11 AM - 12 PM</option>
+            <option value="12">12 PM - 1 PM</option>
+            <option value="13">1 PM - 2 PM</option>
+            <option value="14">2 PM - 3 PM</option>
+            <option value="15">3 PM - 4 PM</option>
+            <option value="16">4 PM - 5 PM</option>
+            <option value="17">5 PM - 6 PM</option>
+            <option value="18">6 PM - 7 PM</option>
+            <option value="19">7 PM - 8 PM</option>
+            <option value="20">8 PM - 9 PM</option>
+            <option value="21">9 PM - 10 PM</option>
+            <option value="22">10 PM - 11 PM</option>
+            <option value="23">11 PM - 12 AM</option>
+          </select>
+        </div>
+        <div class="task-image">
+          <div id="task-text"></div>
+        </div>
+        <button class="party-box" onclick="takeInput()">
+          <div class="party-text">Party time!</div>
+        </button>
+        <div class="set">
+          <div class="set-box"></div>
+          <div class="set-text">
+            <!-- Wake up time: 1 AM - 2 AM <br />
+            Lunch time: 3 AM - 4 AM<br />
+            Nap time: 4 PM - 5 PM -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
